# integration-api

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  setup.cfg  template.yaml
.github/workflows/: CI.yml  aws.yml
app/: main.py
app/api/: api.py
app/api/endpoints/: products.py
fixtures/: products_testfile.csv  test.env
src/: main.py  types.py
src/api/: api.py
src/api/endpoints/: integrate_products.py  integrate_products_test.py  transform.py  transform_test.py
src/api/endpoints/cassettes/: test_integrate_products_lozuka_api_authentification_error_response_status_200.yaml  test_integrate_products_lozuka_api_authentification_error_response_status_502.yaml  test_integrate_products_lozuka_api_client_error_response_status_502.yaml  test_integrate_products_lozuka_api_error_response_status_502.yaml  test_integrate_products_status_200.yaml
