[tool.poetry]
name = "integration-api"
version = "0.1.0"
description = "API adapter for product integrations to a marketplace platform"
authors = ["Kilian Zimmerer"]

[tool.poetry.dependencies]
python = "^3.10"
mangum = "^0.15.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
